tests/isa/x86/expression_fixups/negative/fixed_imm8_overflow.asm
origin(0x100)
x86.use64()

entry:
    shl r11, target
target:
    ret
